# Gazebo_test

./: CMakeLists.txt  README.md  joint_ctrl.sdf  test.sdf  urdf.sdf
bipedal_4/: CMakeLists.txt  package.xml
bipedal_4/config/: joint_names_bipedal_4.yaml
bipedal_4/launch/: display.launch  gazebo.launch
bipedal_4/meshes/: Lbig_Link.STL  Lsmall_Link.STL  Lwheel_Link.STL  Rbig_Link.STL  Rsmall_Link.STL  Rwheel_Link.STL
bipedal_4/urdf/: bipedal_4.csv  bipedal_4.sdf  bipedal_4.urdf
sensor_test/: CMakeLists.txt  README.md  save.config  sensor.sdf  sensor_launch.ign
